Fix logo spacing

--- a/source/stylesheets/librato.css.scss
+++ b/source/stylesheets/librato.css.scss
@@ -77,7 +77,7 @@ ul {
 .container {
   margin-right:auto;
   margin-left:auto;
-  padding-left:16px;
+  padding-left:15px;
   padding-right:35px;
   max-width:none!important;
   -webkit-font-smoothing: antialiased;
@@ -315,7 +315,7 @@ ul {
 .header .logo {
   width:190px;
   height:59px;
-  margin-top:5px;
+  margin-top:6px;
 }
 
 .header .navbar {
